test/official_tests/assignment/undefined.lox
unknown = "what";
// error: {"line":1,"message":"Undefined variable 'unknown'","type":"RuntimeError"}
